--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -30,6 +30,6 @@
 
     }
 </script>
-<script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed&rss_url=https%3A%2F%2Fnews.ycombinator.com%2Frss"></script>
+<script type="text/javascript" src="http://www.teampilipinas.info/feeds/posts/default/-/PBA?alt=json-in-script&callback=showFeed&max-results=10"></script>
 </body>
 </html>
