--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -51,6 +51,6 @@
     }
 </script>
 <script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed&rss_url=http://www.teampilipinas.info/atom.xml"></script>
-<script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed&rss_url=http://www.trendingnewsportal.com/atom.xml"></script>
+<script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed1&rss_url=http://www.trendingnewsportal.com/atom.xml"></script>
 </body>
 </html>
