--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -9,7 +9,7 @@
 <div id="content1"></div>
 <script type="text/javascript">
     var content = document.getElementById('content');
-    var content = document.getElementById('content1');
+    var content1 = document.getElementById('content1');
 
     function showFeed(data){
         if(data.status == 'ok'){
