--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -50,7 +50,7 @@
 
     }
 </script>
-<script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed&rss_url=http://www.teampilipinas.info/atom.xml"></script>
-<script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed1&rss_url=http://www.trendingnewsportal.com/atom.xml"></script>
+<script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed&rss_url=http://www.teampilipinas.info/atom.xml?max-results=5"></script>
+<script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed1&rss_url=http://www.trendingnewsportal.net/atom.xml?max-results=5"></script>
 </body>
 </html>
