--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -41,6 +41,6 @@
     }
 </script>
 <script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed&rss_url=http://www.teampilipinas.info/feeds/posts/default?redirect=false&max-results=5"></script>
-<script type="text/javascript" src="http://rss2json.com/api.json?rss_url=http%3A%2F%2Fwww.trendingnewsportal.net%2Ffeeds%2Fposts%2Fdefault%3Fredirect%3Dfalse%26max-results%3D5"></script>
+<script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed1&rss_url=http%3A%2F%2Fwww.trendingnewsportal.net%2Ffeeds%2Fposts%2Fdefault%3Fredirect%3Dfalse%26max-results%3D5"></script>
 </body>
 </html>
