--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -22,22 +22,12 @@
     }
     function showFeed1(data){
         if(data.status == 'ok'){
-
             var output = '<h1>'+data.feed.title+'</h1>';
-
             for(var i=0;i<data.items.length;++i){
-
-                output += '<p><h2><a href="' +
-                data.items[i].link + '" >' +
-                data.items[i].title + '</h2></a></p>';
-
+                output += '<p><h2><a href="' + data.items[i].link + '" >' + data.items[i].title + '</h2></a></p>';
             }
-
-
             content1.innerHTML = output;
-
         }
-
     }
 </script>
 <script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed&rss_url=http%3A%2F%2Fwww.teampilipinas.info%2Ffeeds%2Fposts%2Fdefault%3Fredirect%3Dfalse%26max-results%3D5"></script>
