--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -31,9 +31,11 @@
 
 <div id="content"></div>
 <div id="content1"></div>
+<div id="content2"></div>
 <script type="text/javascript">
     var content = document.getElementById('content');
     var content1 = document.getElementById('content1');
+    var content2 = document.getElementById('content2');
 
     function showFeed(data){
         if(data.status == 'ok'){
@@ -54,8 +56,20 @@
             content1.innerHTML = output;
         }
     }
+    function showFeed2(data){
+        if(data.status == 'ok'){
+            var output = '<h1>'+data.feed.title+'</h1>';
+            for(var i=0;i<data.items.length;++i){
+                output += '<h2><p><a href="' + data.items[i].link + '" >' + data.items[i].title + '</a></p></h2><span class="fb-comments-count" data-href="'+data.items[i].link+'"></span><span class="fb-share-button" data-layout="button_count" data-href="'+data.items[i].link+'"></span>';
+                
+            }
+            content2.innerHTML = output;
+        }
+    }
 </script>
 <script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed&rss_url=http%3A%2F%2Fwww.teampilipinas.info%2Ffeeds%2Fposts%2Fdefault%3Fredirect%3Dfalse%26max-results%3D5"></script>
 <script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed1&rss_url=http%3A%2F%2Fwww.trendingnewsportal.net%2Ffeeds%2Fposts%2Fdefault%3Fredirect%3Dfalse%26max-results%3D5"></script>
+<script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed&2rss_url=http%3A%2F%2Fnews.abs-cbn.com%2Fnation%2Ffeed"></script>
+
 </body>
 </html>
