--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -69,7 +69,7 @@
 </script>
 <script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed&rss_url=http%3A%2F%2Fwww.teampilipinas.info%2Ffeeds%2Fposts%2Fdefault%3Fredirect%3Dfalse%26max-results%3D5"></script>
 <script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed1&rss_url=http%3A%2F%2Fwww.trendingnewsportal.net%2Ffeeds%2Fposts%2Fdefault%3Fredirect%3Dfalse%26max-results%3D5"></script>
-<script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed&2rss_url=http%3A%2F%2Fnews.abs-cbn.com%2Fnation%2Ffeed"></script>
+<script type="text/javascript" src="http://rss2json.com/api.json?callback=showFeed2&rss_url=http%3A%2F%2Fnews.abs-cbn.com%2Fnation%2Ffeed"></script>
 
 </body>
 </html>
