--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hackers news - rss2json.com</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
 </head>
 <body>
 <script>
