--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Hackers news - rss2json.com</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
+    <style>
+        p{
+            margin: 0px;
+        }
+    </style>
 </head>
 <body>
 <script>
