--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -41,9 +41,9 @@
 <div id="content3"></div>
 <script type="text/javascript">
     var content = document.getElementById('content');
-    var content1 = document.getElementById('content1');
-    var content2 = document.getElementById('content2');
-    var content3 = document.getElementById('content3');
+    var content1 = document.getElementById('content');
+    var content2 = document.getElementById('content');
+    var content3 = document.getElementById('content');
 
     function showFeed(data){
         if(data.status == 'ok'){
