--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -41,9 +41,9 @@
 <div id="content3"></div>
 <script type="text/javascript">
     var content = document.getElementById('content');
-    var content1 = document.getElementById('content');
-    var content2 = document.getElementById('content');
-    var content3 = document.getElementById('content');
+    var content1 = document.getElementById('content1');
+    var content2 = document.getElementById('content2');
+    var content3 = document.getElementById('content3');
 
     function showFeed(data){
         if(data.status == 'ok'){
@@ -68,7 +68,6 @@
             var output = '<h1>'+data.feed.title+'</h1>';
             for(var i=0;i<data.items.length;++i){
                 output += '<p><a href="' + data.items[i].link + '" >' + data.items[i].title + '</a></p><span class="fb-comments-count" data-href="'+data.items[i].link+'"></span><span class="fb-share-button" data-layout="button_count" data-href="'+data.items[i].link+'"></span>';
-                
             }
             content2.innerHTML = output;
         }
@@ -78,7 +77,6 @@
             var output = '<h1>'+data.feed.title+'</h1>';
             for(var i=0;i<data.items.length;++i){
                 output += '<p><a href="' + data.items[i].link + '" >' + data.items[i].title + '</a></p><span class="fb-comments-count" data-href="'+data.items[i].link+'"></span><span class="fb-share-button" data-layout="button_count" data-href="'+data.items[i].link+'"></span>';
-                
             }
             content3.innerHTML = output;
         }
