--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hackers news - rss2json.com</title>
+    <title>News Collector</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css">
     <style>
         p{
