--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -52,6 +52,6 @@
     }
   
 </script>
-<script type="text/javascript" src="http://www.mybloggertricks.com/feeds/posts/default?alt=json"></script>
+<script type="text/javascript" src="http://www.mybloggertricks.com/feeds/posts/default?alt=json&callback=showFeed"></script>
 </body>
 </html>
