--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -53,5 +53,27 @@
   
 </script>
 <script type="text/javascript" src="http://www.mybloggertricks.com/feeds/posts/default?alt=json&amp;callback=showFeed"></script>
+<script type=”text/javascript”>
+var numposts = 100;
+var standardstyling = true;
+function showrecentposts(json) {
+for (var i = 0; i < numposts; i++) {
+var entry = json.feed.entry[i];
+var posttitle = entry.title.$t;
+var posturl;
+if (i == json.feed.entry.length) break;
+for (var k = 0; k < entry.link.length; k++) {
+if (entry.link[k].rel == ‘alternate’) {
+posturl = entry.link[k].href;
+break;
+}}
+posttitle = posttitle.link(posturl);
+if (standardstyling) document.write(‘<li>’);
+document.write(posttitle);}
+if (standardstyling) document.write(‘</li>’);
+}
+</script>
+<ul>
+<script src=”http://www.bloggertipstricks.com/feeds/posts/default?orderby=published&amp;alt=json-in-script&amp;callback=showrecentposts&amp;max-results=999″></script>
 </body>
 </html>
