--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -53,7 +53,7 @@
   
 </script>
 <script type="text/javascript" src="http://www.mybloggertricks.com/feeds/posts/default?alt=json&amp;callback=showFeed"></script>
-<script type=”text/javascript”>
+<script type="text/javascript">
 var numposts = 100;
 var standardstyling = true;
 function showrecentposts(json) {
@@ -68,12 +68,12 @@ posturl = entry.link[k].href;
 break;
 }}
 posttitle = posttitle.link(posturl);
-if (standardstyling) document.write(‘<li>’);
+if (standardstyling) document.write('<li>');
 document.write(posttitle);}
-if (standardstyling) document.write(‘</li>’);
+if (standardstyling) document.write('</li>');
 }
 </script>
 <ul>
-<script src=”http://www.bloggertipstricks.com/feeds/posts/default?orderby=published&amp;alt=json-in-script&amp;callback=showrecentposts&amp;max-results=999″></script>
+<script src="http://www.bloggertipstricks.com/feeds/posts/default?orderby=published&amp;alt=json-in-script&amp;callback=showrecentposts&amp;max-results=999"></script>
 </body>
 </html>
