--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -74,6 +74,6 @@ if (standardstyling) document.write('</li>');
 }
 </script>
 <ul>
-<script src="http://www.bloggertipstricks.com/feeds/posts/default?orderby=published&amp;alt=json-in-script&amp;callback=showrecentposts&amp;max-results=999"></script>
+<script src="http://www.pinoyshares.com/feeds/posts/default?orderby=published&amp;alt=json-in-script&amp;callback=showrecentposts&amp;max-results=999"></script>
 </body>
 </html>
