--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -69,7 +69,7 @@ function showrecentposts(json) {
       }}
     posttitle = posttitle.link(posturl);
     if (standardstyling) document.write('<li>');
-    document.write(posttitle);}
+    document.write(posttitle);document.write(posttitle);}
     if (standardstyling) document.write('</li>');
 }
 </script>
