--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -70,7 +70,7 @@ function showrecentposts(json) {
     posttitle = posttitle.link(posturl);
     if (standardstyling) 
     document.write(posttitle);
-    document.write('<br><span class="fb-share-button" data-layout="button_count" data-href="'+posturl+'"></span>');}
+    document.write('<br/><span class="fb-share-button" data-layout="button_count" data-href="'+posturl+'"></span><br/>');}
  
 }
 </script>
