--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -54,7 +54,7 @@
 <script type="text/javascript" src="http://www.mybloggertricks.com/feeds/posts/default?alt=json&amp;callback=showFeed"></script>
 
 <script type="text/javascript">
-document.write('<table>');
+
 var numposts = 10;
 var standardstyling = true;
 function showrecentposts(json) {
@@ -70,14 +70,19 @@ function showrecentposts(json) {
       }}
     posttitle = posttitle.link(posturl);
     if (standardstyling) 
-    document.write('<tr><td><span class="fb-comments-count" data-layout="button_count" data-href="'+posturl+'"></span></td>');
-    document.write('<td><span class="fb-share-button" data-layout="button_count" data-href="'+posturl+'"></span></td>');
-    document.write('<td>'+posttitle+'</td></tr>');
+    document.write('<table><tr>');
+    document.write('td');
+    document.write('<span class="fb-comments-count" data-layout="button_count" data-href="'+posturl+'"></span>');
+    document.write('</td><td>');
+    document.write('<span class="fb-share-button" data-layout="button_count" data-href="'+posturl+'"></span>');
+    document.write('</td><td>');
+    document.write(posttitle);
+    document.write('</td></tr></table>');
   }
  
 
 }
- document.write('</table>');
+
 </script>
 
 <script src="http://www.pinoyshares.com/feeds/posts/default?orderby=published&amp;alt=json-in-script&amp;callback=showrecentposts&amp;max-results=10"></script>
