--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -70,8 +70,7 @@ function showrecentposts(json) {
       }}
     posttitle = posttitle.link(posturl);
     if (standardstyling) 
-    document.write('<table><tr>');
-    document.write('td');
+    document.write('<table><tr><td>');
     document.write('<span class="fb-comments-count" data-layout="button_count" data-href="'+posturl+'"></span>');
     document.write('</td><td>');
     document.write('<span class="fb-share-button" data-layout="button_count" data-href="'+posturl+'"></span>');
