--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -27,38 +27,12 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
-<div
-  class="fb-like"
-  data-share="true"
-  data-width="450"
-  data-show-faces="true">
-</div>
-<div id="content"></div>
-<div id="content1"></div>
-<div id="content2"></div>
-<div id="content3"></div>
-<div id="content4"></div>
-<script type="text/javascript">
-    var content = document.getElementById('content');
-    function showFeed(json){
-        
-            var output = '<h1>'+json.feed.title+'</h1>';
-            for(var i=0;i<json.items.length;++i){
-                output += '<p><a href="' + json.items[i].link + '" >' + json.items[i].title + '</a></p><span class="fb-comments-count" data-href="'+json.items[i].link+'"></span><span class="fb-share-button" data-layout="button_count" data-href="'+json.items[i].link+'"></span>';
-            }
-            content.innerHTML = output;
-        
-    }
-  
-</script>
-<script type="text/javascript" src="http://www.mybloggertricks.com/feeds/posts/default?alt=json&amp;callback=showFeed"></script>
 
 <script type="text/javascript">
-
 var numposts = 10;
 var standardstyling = true;
-function showrecentposts(json) {
-    document.write('<table>');
+function showRecentPosts(json) {
+document.write('<table>');
   for (var i = 0; i < numposts; i++) {
     var entry = json.feed.entry[i];
     var posttitle = entry.title.$t;
@@ -79,12 +53,9 @@ function showrecentposts(json) {
     document.write(posttitle);
     document.write('</td></tr>');
   }
- 
 document.write('</table>');
 }
-
 </script>
-
-<script src="http://www.pinoyshares.com/feeds/posts/default?orderby=published&amp;alt=json-in-script&amp;callback=showrecentposts&amp;max-results=10"></script>
+<script src="http://www.pinoyshares.com/atom.xml?alt=json&amp;max-results=10&amp;callback=showRecentPosts"></script>
 </body>
 </html>
