--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -28,34 +28,7 @@
    }(document, 'script', 'facebook-jssdk'));
 </script>
 
-<script type="text/javascript">
-var numposts = 10;
-var standardstyling = true;
-function showRecentPosts(json) {
-document.write('<table>');
-  for (var i = 0; i < numposts; i++) {
-    var entry = json.feed.entry[i];
-    var posttitle = entry.title.$t;
-    var posturl;
-    if (i == json.feed.entry.length) break;
-    for (var k = 0; k < entry.link.length; k++) {
-      if (entry.link[k].rel == 'alternate') {
-        posturl = entry.link[k].href;
-        break;
-      }}
-    posttitle = posttitle.link(posturl);
-    if (standardstyling) 
-    document.write('<tr><td>');
-    document.write('<span class="fb-comments-count" data-layout="button_count" data-href="'+posturl+'"></span>');
-    document.write('</td><td>');
-    document.write('<span class="fb-share-button" data-layout="button_count" data-href="'+posturl+'"></span>');
-    document.write('</td><td>');
-    document.write(posttitle);
-    document.write('</td></tr>');
-  }
-document.write('</table>');
-}
-</script>
+<script type="text/javascript" src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
 <script src="http://www.pinoyshares.com/atom.xml?alt=json&amp;max-results=10&amp;callback=showRecentPosts"></script>
 </body>
 </html>
