--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -8,6 +8,9 @@
 <body>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
-<script src="http://www.pinoyshares.com/atom.xml?alt=json&amp;max-results=10&amp;callback=showRecentPosts"></script>
+<h1>http://www.sizzlingfeed.com/</h1>
+<script src="http://www.sizzlingfeed.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+</h1>http://www.xolxol.ph/</h1>
+<script src="http://www.xolxol.ph/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
 </body>
 </html>
