--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -12,5 +12,42 @@ http://www.sizzlingfeed.com
 <script src="http://www.sizzlingfeed.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://www.xolxol.ph
 <script src="http://www.xolxol.ph/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.trendingnewsportal.net
+<script src="http://www.trendingnewsportal.net/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.socialtrendsph.com
+<script src="http://www.socialtrendsph.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.crackerdaily.com
+<script src="http://www.crackerdaily.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.philippinesreports.com
+<script src="http://www.philippinesreports.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.todayinmanila.com
+<script src="http://www.todayinmanila.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.thinkingpinoy.net
+<script src="http://www.thinkingpinoy.net/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.boompanot.com
+<script src="http://www.boompanot.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.noypinews.com
+<script src="http://www.noypinews.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://philippinesnewsportal2016.blogspot.com
+<script src="http://philippinesnewsportal2016.blogspot.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://elitenewsfeeds.blogspot.com
+<script src="http://elitenewsfeeds.blogspot.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.philippinesreports.com
+<script src="http://www.philippinesreports.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.thesummitexpress.com
+<script src="http://www.thesummitexpress.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.pinoyworld.net
+<script src="http://www.pinoyworld.net/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.worldviewsph.com
+<script src="http://www.worldviewsph.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.theartikulounonews.com
+<script src="http://www.theartikulounonews.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.limitedtrends.com
+<script src="http://www.limitedtrends.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://viralnewssources.blogspot.com
+<script src="http://viralnewssources.blogspot.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://www.socialpees.com
+<script src="http://www.socialpees.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
 </body>
 </html>
+
