--- a/facebook-trending/9.html
+++ b/facebook-trending/9.html
@@ -27,7 +27,7 @@ http://www.thinkingpinoy.net
 http://www.boompanot.com
 <script src="http://www.boompanot.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://www.noypinews.com
-<script src="http://www.noypinews.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
+<script src="http://rodydu30.blogspot.com/atom.xml?alt=json&amp;max-results=10&amp;redirect=false&amp;callback=showRecentPosts"></script>
 </body>
 </html>
 
