--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -19,6 +19,12 @@
 <body>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
-<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/001'>Page 1</a>
+<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/001' target='_blank'>Page 1</a>
+http://www.filipinonewsinfo.com
+http://tradeph.blogspot.com
+http://www.wattafox.com
+http://www.classifiedtrends.net
+http://www.scoopitph.com
+http://www.nowreader.com
 </body>
 </html>
