--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -26,5 +26,6 @@ http://www.wattafox.com
 http://www.classifiedtrends.net
 http://www.scoopitph.com
 http://www.nowreader.com
+<script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/ads.js"></script>
 </body>
 </html>
