--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -26,6 +26,8 @@ http://www.wattafox.com
 http://www.classifiedtrends.net
 http://www.scoopitph.com
 http://www.nowreader.com
-<script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/ads.js"></script>
+ <!-- Begin BidVertiser code -->
+<SCRIPT SRC="http://bdv.bidvertiser.com/BidVertiser.dbm?pid=570957&bid=1820996" TYPE="text/javascript"></SCRIPT>
+<!-- End BidVertiser code --> 
 </body>
 </html>
