--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -19,15 +19,66 @@
 <body>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
-<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/001' target='_blank'>Page 1</a>
-http://www.filipinonewsinfo.com
-http://tradeph.blogspot.com
-http://www.wattafox.com
-http://www.classifiedtrends.net
-http://www.scoopitph.com
-http://www.nowreader.com
+<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/001.html' target='_blank'><h2>Page 1</h2></a>
+<ul>
+<li>http://www.filipinonewsinfo.com</li>
+<li>http://tradeph.blogspot.com</li>
+<li>http://www.wattafox.com</li>
+<li>http://www.classifiedtrends.net</li>
+<li>http://www.scoopitph.com</li>
+</ul>
+<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html' target='_blank'><h2>Page 2</h2></a>
+<ul>
+<li>http://www.nowreader.com</li>
+<li>http://philippinesnewsportal2016.blogspot.com</li>
+<li>http://elitenewsfeeds.blogspot.com</li>
+<li>http://www.philippinesreports.com</li>
+<li>http://www.thesummitexpress.com</li>
+</ul>
+<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html' target='_blank'><h2>Page 3</h2></a>
+<ul>
+<li>http://www.pinoyworld.net</li>
+<li>http://www.worldviewsph.com</li>
+<li>http://www.theartikulounonews.com</li>
+<li>http://www.socialpees.com</li>
+<li>http://www.trendingnewsportal.net</li>
+</ul>
+<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html' target='_blank'><h2>Page 4</h2></a>
+<ul>
+<li>http://phppoliticsnews.blogspot.com</li>
+<li>http://www.socialnewsph.com</li>
+<li>http://www.newskoday.net</li>
+<li>http://www.socialtrendsph.com</li>
+<li>http://www.ncatalyst.com</li>
+</ul>
+<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html' target='_blank'><h2>Page 5</h2></a>
+<ul>
+<li>http://www.du30worldwide.com</li>
+<li>http://www.newstrendph.com</li>
+<li>http://www.boompanot.com</li>
+<li>http://www.xolxol.ph</li>
+<li>http://www.netizensph.com</li>
+</ul>
+<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html' target='_blank'><h2>Page 6</h2></a>
+<ul>
+<li>http://www.globalnewsph.com</li>
+<li>http://www.philippinesreports.com</li>
+<li>http://www.todayinmanila.com</li>
+<li>http://www.thinkingpinoy.net</li>
+<li>http://www.elitenewsfeed.org</li>
+</ul>
+<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html' target='_blank'><h2>Page 7</h2></a>
+<ul>
+<li>http://www.trendingnewsphfile.net</li>
+<li>http://www.sizzlingfeed.com</li>
+<li>http://www.noypinews.com</li>
+<li>http://www.coolbuster.net</li>
+<li>http://www.boytrending.com</li>
+</ul>
+<center>
  <!-- Begin BidVertiser code -->
 <SCRIPT SRC="http://bdv.bidvertiser.com/BidVertiser.dbm?pid=570957&bid=1820996" TYPE="text/javascript"></SCRIPT>
 <!-- End BidVertiser code --> 
+</center>
 </body>
 </html>
