--- a/facebook-trending/007.html
+++ b/facebook-trending/007.html
@@ -12,8 +12,8 @@ http://www.trendingnewsphfile.net
 <script src="http://www.trendingnewsphfile.net/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://www.sizzlingfeed.com
 <script src="http://www.sizzlingfeed.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
-http://www.noypinews.com
-<script src="http://www.noypinews.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+http://rodydu30.blogspot.com
+<script src="http://rodydu30.blogspot.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://www.coolbuster.net
 <script src="http://www.coolbuster.net/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://www.boytrending.com
