--- a/facebook-trending/001.html
+++ b/facebook-trending/001.html
@@ -8,6 +8,7 @@
 <body>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
+<h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Go Back</a></h2>
 http://www.filipinonewsinfo.com
 <script src="http://www.filipinonewsinfo.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://tradeph.blogspot.com
@@ -18,5 +19,6 @@ http://www.classifiedtrends.net
 <script src="http://www.classifiedtrends.net/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://www.scoopitph.com
 <script src="http://www.scoopitph.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+<h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Go Back</a></h2>
 </body>
 </html>
