--- a/facebook-trending/index.html
+++ b/facebook-trending/index.html
@@ -19,7 +19,7 @@
 <body>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
-<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/001.html' target='_blank'><h2>Page 1</h2></a>
+<h2><a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/001.html' target='_blank'>Page 1</a></h2>
 <ul>
 <li>http://www.filipinonewsinfo.com</li>
 <li>http://tradeph.blogspot.com</li>
@@ -27,7 +27,7 @@
 <li>http://www.classifiedtrends.net</li>
 <li>http://www.scoopitph.com</li>
 </ul>
-<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html' target='_blank'><h2>Page 2</h2></a>
+<h2><a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html' target='_blank'>Page 2</a></h2>
 <ul>
 <li>http://www.nowreader.com</li>
 <li>http://philippinesnewsportal2016.blogspot.com</li>
@@ -35,7 +35,7 @@
 <li>http://www.philippinesreports.com</li>
 <li>http://www.thesummitexpress.com</li>
 </ul>
-<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/003.html' target='_blank'><h2>Page 3</h2></a>
+<h2><a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/003.html' target='_blank'>Page 3</a></h2>
 <ul>
 <li>http://www.pinoyworld.net</li>
 <li>http://www.worldviewsph.com</li>
@@ -43,7 +43,7 @@
 <li>http://www.socialpees.com</li>
 <li>http://www.trendingnewsportal.net</li>
 </ul>
-<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/004.html' target='_blank'><h2>Page 4</h2></a>
+<h2><a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/004.html' target='_blank'>Page 4</a></h2>
 <ul>
 <li>http://phppoliticsnews.blogspot.com</li>
 <li>http://www.socialnewsph.com</li>
@@ -51,7 +51,7 @@
 <li>http://www.socialtrendsph.com</li>
 <li>http://www.ncatalyst.com</li>
 </ul>
-<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/005.html' target='_blank'><h2>Page 5</h2></a>
+<h2><a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/005.html' target='_blank'>Page 5</a></h2>
 <ul>
 <li>http://www.du30worldwide.com</li>
 <li>http://www.newstrendph.com</li>
@@ -59,7 +59,7 @@
 <li>http://www.xolxol.ph</li>
 <li>http://www.netizensph.com</li>
 </ul>
-<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/006.html' target='_blank'><h2>Page 6</h2></a>
+<h2><a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/006.html' target='_blank'>Page 6</a></h2>
 <ul>
 <li>http://www.globalnewsph.com</li>
 <li>http://www.philippinesreports.com</li>
@@ -67,7 +67,7 @@
 <li>http://www.thinkingpinoy.net</li>
 <li>http://www.elitenewsfeed.org</li>
 </ul>
-<a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/007.html' target='_blank'><h2>Page 7</h2></a>
+<h2><a href='http://geekpublisher.github.io/blogger-tools/facebook-trending/007.html' target='_blank'>Page 7</a></h2>
 <ul>
 <li>http://www.trendingnewsphfile.net</li>
 <li>http://www.sizzlingfeed.com</li>
