--- a/facebook-trending/003.html
+++ b/facebook-trending/003.html
@@ -8,6 +8,7 @@
 <body>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
+<h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html" target="_self">Previous</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/004.html" target="_self">Next</a></h2>
 http://www.pinoyworld.net
 <script src="http://www.pinoyworld.net/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://www.worldviewsph.com
@@ -18,5 +19,6 @@ http://www.socialpees.com
 <script src="http://www.socialpees.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://www.trendingnewsportal.net
 <script src="http://www.trendingnewsportal.net/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+<h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/002.html" target="_self">Previous</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/004.html" target="_self">Next</a></h2>
 </body>
 </html>
