--- a/facebook-trending/004.html
+++ b/facebook-trending/004.html
@@ -8,6 +8,7 @@
 <body>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
+<h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/003.html" target="_self">Previous</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/005.html" target="_self">Next</a></h2>
 http://phppoliticsnews.blogspot.com
 <script src="http://phppoliticsnews.blogspot.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://www.socialnewsph.com
@@ -18,5 +19,6 @@ http://www.socialtrendsph.com
 <script src="http://www.socialtrendsph.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://www.ncatalyst.com
 <script src="http://www.ncatalyst.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+<h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/003.html" target="_self">Previous</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/005.html" target="_self">Next</a></h2>
 </body>
 </html>
