--- a/facebook-trending/005.html
+++ b/facebook-trending/005.html
@@ -8,6 +8,7 @@
 <body>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/facebookSDK.js"></script>
 <script src="http://geekpublisher.github.io/blogger-tools/facebook-trending/js/showRecentPosts.js"></script>
+<h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/004.html" target="_self">Previous</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/006.html" target="_self">Next</a></h2>
 http://www.du30worldwide.com
 <script src="http://www.du30worldwide.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://www.newstrendph.com
@@ -18,5 +19,6 @@ http://www.xolxol.ph
 <script src="http://www.xolxol.ph/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
 http://www.netizensph.com
 <script src="http://www.netizensph.com/atom.xml?alt=json&amp;max-results=20&amp;redirect=false&amp;callback=showRecentPosts"></script>
+<h2><a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/004.html" target="_self">Previous</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/" target="_self">Complete Lists</a>&nbsp;<a href="http://geekpublisher.github.io/blogger-tools/facebook-trending/006.html" target="_self">Next</a></h2>
 </body>
 </html>
