--- a/facebook-trending/test.html
+++ b/facebook-trending/test.html
@@ -6,7 +6,7 @@
  
 <script>
 YUI().use('yql', function(Y){
-    var query = 'select * from rss(0,15) where url in ("http://www.gmanetwork.com/news/rss/publicaffairs", "http://www.gmanetwork.com/news/rss/newstv", "http://www.gmanetwork.com/news/rss/video", "http://www.gmanetwork.com/news/rss/photo", "http://www.gmanetwork.com/news/rss/news", "http://www.gmanetwork.com/news/rss/news/world") | sort(field="pubDate", descending="true")'
+    var query = 'select * from rss where url in ("http://www.gmanetwork.com/news/rss/publicaffairs", "http://www.gmanetwork.com/news/rss/newstv", "http://www.gmanetwork.com/news/rss/video", "http://www.gmanetwork.com/news/rss/photo", "http://www.gmanetwork.com/news/rss/news", "http://www.gmanetwork.com/news/rss/news/world") | sort(field="pubDate", descending="true")'
     var q = Y.YQL(query, function(r){
         //r now contains the result of the YQL Query as a JSON
         var feedmarkup = '<p>'
