--- a/facebook-trending/test.html
+++ b/facebook-trending/test.html
@@ -9,11 +9,11 @@ YUI().use('yql', function(Y){
     var query = 'select * from rss where url in ("http://www.gmanetwork.com/news/rss/publicaffairs", "http://www.gmanetwork.com/news/rss/newstv", "http://www.gmanetwork.com/news/rss/video", "http://www.gmanetwork.com/news/rss/photo", "http://www.gmanetwork.com/news/rss/news", "http://www.gmanetwork.com/news/rss/news/world", "http://www.gmanetwork.com/news/rss/news/metro", "http://www.gmanetwork.com/news/rss/news/nation", "http://www.gmanetwork.com/news/rss/news/regions", "http://www.gmanetwork.com/news/rss/news/specialreports", "http://www.gmanetwork.com/news/rss/news/pinoyabroad", "http://www.gmanetwork.com/news/rss/news/ulatfilipino", "http://www.gmanetwork.com/news/rss/money") | sort(field="pubDate", descending="true")'
     var q = Y.YQL(query, function(r){
         //r now contains the result of the YQL Query as a JSON
-        var feedmarkup = '<ol><li>'
+        var feedmarkup = '<ol>'
         var feed = r.query.results.item // get feed as array of entries
         for (var i=0; i<feed.length; i++){
-            feedmarkup += '<a href="' + feed[i].link + '">'
-            feedmarkup += feed[i].title + '</a></li></ol>'
+            feedmarkup += '<li><a href="' + feed[i].link + '">'
+            feedmarkup += feed[i].title + '</a></li>'
         }
         document.getElementById('qznews1').innerHTML = feedmarkup
     })
